--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,11 @@
 {
-    "name":              "secretary/psr-16-cache-adapter",
-    "description":       "PSR-16 Cache Adapter for Secretary",
+    "name":              "secretary/hashicorp-vault-adapter",
+    "description":       "Hashicorp Vault adapter for Secretary",
     "type":              "library",
     "license":           "MIT",
     "keywords":          [
         "secrets",
-        "cache",
-        "psr-16",
+        "vault",
         "secretary"
     ],
     "authors":           [
@@ -17,9 +16,10 @@
     ],
     "minimum-stability": "stable",
     "require":           {
-        "php":              "^7.1.0",
-        "psr/simple-cache": "^1.0",
-        "secretary/core":   "self.version"
+        "php":                      "^7.1.0",
+        "ext-json":                 "*",
+        "guzzlehttp/guzzle":        "^6.0",
+        "symfony/options-resolver": "^4.2"
     },
     "require-dev":       {
         "phpunit/phpunit": "^8.0",
@@ -27,12 +27,12 @@
     },
     "autoload":          {
         "psr-4": {
-            "Secretary\\Adapter\\Cache\\PSR16Cache\\": "src/"
+            "Secretary\\Adapter\\Hashicorp\\Vault\\": ""
         }
     },
     "autoload-dev":      {
         "psr-4": {
-            "Secretary\\Adapter\\Cache\\PSR16Cache\\Tests\\": "tests/"
+            "Secretary\\Adapter\\Hashicorp\\Vault\\Tests\\": "Tests/"
         }
     }
 }
