--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,13 @@
     ],
     "minimum-stability": "stable",
     "require":           {
-        "php":                      "^7.2.0",
+        "php":                      ">=7.2",
         "ext-json":                 "*",
         "guzzlehttp/guzzle":        "^6.0",
         "symfony/options-resolver": "^3.4 || ^4.0 || ^5.0"
     },
     "require-dev":       {
-        "phpunit/phpunit": "^8.0",
+        "phpunit/phpunit": "^8.0 || ^9.0",
         "mockery/mockery": "^1.2"
     },
     "autoload":          {
