--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,10 @@
     ],
     "minimum-stability": "stable",
     "require":           {
-        "php":                      ">=7.2",
+        "php":                      ">=7.4",
         "ext-json":                 "*",
-        "guzzlehttp/guzzle":        "^6.0",
-        "symfony/options-resolver": "^3.4 || ^4.0 || ^5.0"
+        "guzzlehttp/guzzle":        "^6.0 || ^7.0",
+        "symfony/options-resolver": "^4.0 || ^5.0 || ^6.0"
     },
     "require-dev":       {
         "phpunit/phpunit": "^8.0 || ^9.0",
