--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     ],
     "minimum-stability": "stable",
     "require":           {
-        "php":                      ">=7.4",
+        "php":                      "^7.4 || ^8.0",
         "ext-json":                 "*",
         "guzzlehttp/guzzle":        "^6.0 || ^7.0",
         "symfony/options-resolver": "^4.0 || ^5.0 || ^6.0"
