--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,10 @@
     ],
     "minimum-stability": "stable",
     "require":           {
-        "php":                      "^7.4 || ^8.0",
+        "php":                      "^8.0",
         "ext-json":                 "*",
         "guzzlehttp/guzzle":        "^6.0 || ^7.0",
-        "symfony/options-resolver": "^4.0 || ^5.0 || ^6.0"
+        "symfony/options-resolver": "^5.0 || ^6.0"
     },
     "require-dev":       {
         "phpunit/phpunit": "^9.0",
