--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require":           {
         "php":                      "^8.0",
         "ext-json":                 "*",
-        "guzzlehttp/guzzle":        "^6.0 || ^7.0",
+        "guzzlehttp/guzzle":        "^7.0",
         "symfony/options-resolver": "^5.4 || ^6.0"
     },
     "require-dev":       {
