--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,10 @@
         "php":                      "^8.0",
         "ext-json":                 "*",
         "guzzlehttp/guzzle":        "^7.0",
-        "symfony/options-resolver": "^5.4 || ^6.0"
+        "symfony/options-resolver": "^5.4 || ^6.0 || ^7.0"
     },
     "require-dev":       {
-        "phpunit/phpunit": "^9.0",
+        "phpunit/phpunit": "^9.0 || ^10.0",
         "mockery/mockery": "^1.4"
     },
     "autoload":          {
